2004-07-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktextbuffer.xml (add_selection_clipboard)
	(remove_selection_clipboard)
	(cut_clipboard) (copy_clipboard) (paste_clipboard)
	These methods are available in PyGTK 2.2.

	* pygtk-gtktextview.xml (Description) Clipboard access is available
	in PyGTK 2.2.

	* pygtk-gtkwidget.xml (get_clipboard) Available in PyGTK 2.2.

2004-07-21  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkclipboard.xml (gtk.Clipboard) Add description of defaults
	for optional params.
	(gtk.clipboard_get) Add description of this PyGTK 2.4 function.

	* pygtk-gtk-functions.xml
	(gtk.clipboard_get) Add link for this PyGTK 2.4 function.

	* pygtk-gtkclipboard.xml (set_with_data) Add description of get_func
	and clear_func signatures.

2004-07-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeviewcolumn.xml (set_sort_column_id) Expand description
	of this convenience method.
	(set_sort_indicator) Add note re effect of set_sort_column_id() on
	use of this method.

2004-07-19  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreesortable.xml (set_sort_func) Add description of
	comaprison function return value. Thanks to Andrew Boie.

	* pygtk-gtktreeview.xml (get_path_at_pos) Return value if no path
	is None.

2004-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_actions)
	(add_toggle_actions) (add_radio_actions) Document new user_data
	param.

2004-07-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkbutton.xml Add description of optional use_underline
	param added in PyGTK 2.4
	* pygtk-gtktogglebutton.xml Add description of optional use_underline
	param added in PyGTK 2.4. Add missing constructor param description.
	* pygtk-gtkcheckbutton.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkradiobutton.xml Add description of optional use_underline
	param added in PyGTK 2.4.
	* pygtk-gtkcheckmenuitem.xml Add description of optional use_underline
	param added in PyGTK 2.4.