@@ -1,3 +1,8 @@
+2004-07-23  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtktreemodel.xml ("row-inserted") ("row-changed") Add
+	detail on when these are emitted.
+
 2004-07-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktextbuffer.xml (add_selection_clipboard)
